# magister-cli

./: .env.example  .gitignore  CONTRIBUTING.md  EXAMPLES_AND_PATTERNS.md  LEARNINGS.md  LICENSE  PREVENTION_GUIDE.md  PREVENTION_QUICK_REFERENCE.md  README.md  SECURITY.md  magister  main.py  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: handleiding-ouders.md  index.html
docs/assets/: style.css
docs/solutions/api-issues/: lowercase-items-fix.md  messages-api-bugs.md  parent-accounts-and-attachments.md
docs/solutions/features/: wave2-enhancements-20260108.md
docs/solutions/setup/: dual-architecture-venv-setup.md
plans/: code-review-fixes.md  feat-magister-cli-enhancements.md
src/magister_cli/: config.py  main.py
src/magister_cli/api/: __init__.py  base.py  client.py  exceptions.py  models.py
src/magister_cli/auth/: __init__.py  async_browser_auth.py  browser_auth.py  constants.py  credential_store.py  headless_login.py  pkce_oauth.py  token_manager.py  token_refresh.py
src/magister_cli/cli/: completers.py  errors.py  formatters.py  progress.py  utils.py
src/magister_cli/mcp/: __init__.py  __main__.py  context.py  server.py
src/magister_cli/services/: __init__.py  async_magister.py  core.py  homework.py  ical_export.py  notifications.py  state_tracker.py  (+1 more)
tests/: test_api_client.py  test_api_models.py  test_async_magister.py  test_context.py  test_core.py  test_credential_store.py  test_headless_login.py  test_homework_service.py  test_state_tracker.py  test_token_manager.py
tests/fixtures/: account.json  afspraken.json  cijfers.json
todos/: 001-complete-p1-non-atomic-state-writes.md  002-complete-p1-no-file-locking.md  003-complete-p1-duplicate-code-classes.md  004-complete-p1-mcp-message-tools-missing.md  005-complete-p1-attachment-n-plus-1.md  006-complete-p2-mcp-grade-analysis-missing.md  007-complete-p2-sequential-downloads.md  008-complete-p2-unbounded-state-growth.md  009-complete-p2-three-service-architectures.md  010-complete-p2-keyring-corruption-handling.md  011-complete-p2-timezone-handling.md  012-complete-p2-missing-async-service-tests.md  013-complete-p3-state-file-permissions.md  014-complete-p3-token-repr-redaction.md
(+33 files in other folders)
