[project]
name = "magister-cli"
version = "0.1.0"
description = "CLI tool voor Magister data ophalen en quiz generatie"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "keyring>=25.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[project.scripts]
magister = "magister_cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magister_cli"]
