[project]
name = "magister-cli"
version = "0.1.0"
description = "CLI tool voor Magister data ophalen en quiz generatie"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer[all]>=0.12.0",  # Includes rich + shellingham for completion
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "keyring>=25.0.0",
    "tenacity>=8.2.0",
    "mcp[cli]>=1.0.0",  # MCP server for Claude integration
    "pyyaml>=6.0.0",  # YAML config file support
    "icalendar>=5.0.0",  # iCal export support
    "desktop-notifier>=5.0.0",  # Cross-platform desktop notifications
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[project.scripts]
magister = "magister_cli.main:app"
magister-mcp = "magister_cli.mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/magister_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
